k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-db   # Müdüre diyoruz ki: Sırtında bu etiket olan podları yönet.
  template:
    metadata:
      labels:
        app: postgres-db # Üretilen podların sırtına bu etiketi yapıştır.
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres-data 
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
